<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    android:background="@color/cardBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/advertisementText"
        android:text="@string/aText"
        android:textColor="@color/cardText"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/texts"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aText1"
            android:layout_below="@+id/advertisementText"
            android:id="@+id/advertisementText1"
            android:textColor="@color/cardText"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/texts"
            />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/advertisementButton"
        android:layout_below="@+id/advertisementText1"
        android:text="Advertise with us"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/headings"
        />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/cardText"
            />
        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp"
            card_view:cardBackgroundColor="@color/cardColor">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:id="@+id/Fuse"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/fusioncharts"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fusehead"
                android:text="@string/fusionCharts"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/Fuse"
                android:textColor="@color/cardText"
                android:textSize="@dimen/headings"
                />
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/Fuse"
                android:textSize="@dimen/texts"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/fusehead"
                android:text="@string/FuseText"
                android:textColor="@color/cardText" />

        </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp"
            card_view:cardBackgroundColor="@color/cardColor">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <ImageView
                    android:id="@+id/Adstring"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/adstring"
                    android:layout_alignParentLeft="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Adstring1"
                    android:text="@string/Adstring"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/Adstring"
                    android:textColor="@color/cardText"
                    android:textSize="@dimen/headings"
                    />
                <TextView
                    android:id="@+id/Adstring2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Adstring"
                    android:textSize="10dp"
                    android:layout_marginLeft="@dimen/texts"
                    android:layout_below="@+id/Adstring1"
                    android:text="@string/AdstringText"
                    android:textColor="@color/cardText" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp"
            card_view:cardBackgroundColor="@color/cardColor">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <ImageView
                    android:id="@+id/Unac"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/unacademy"
                    android:layout_alignParentLeft="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Unac1"
                    android:text="@string/Unacademy"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/Unac"
                    android:textColor="@color/cardText"
                    android:textSize="@dimen/headings"
                    />
                <TextView
                    android:id="@+id/unactext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Unac"
                    android:textSize="10dp"
                    android:layout_marginLeft="@dimen/texts"
                    android:layout_below="@+id/Unac1"
                    android:text="@string/UnacademyText"
                    android:textColor="@color/cardText" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp"
            card_view:cardBackgroundColor="@color/cardColor">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <ImageView
                    android:id="@+id/Pfiz"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/pfizer"
                    android:layout_alignParentLeft="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Pfiz1"
                    android:text="@string/Pfizer"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/Pfiz"
                    android:textColor="@color/cardText"
                    android:textSize="@dimen/headings"
                    />
                <TextView
                    android:id="@+id/Pfiz2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Pfiz"
                    android:textSize="@dimen/texts"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/Pfiz1"
                    android:text="@string/PfizerText"
                    android:textColor="@color/cardText" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
