<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    android:background="@color/cardBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@color/cardText"
            android:text="Guideline"
            android:textSize="@dimen/headings"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_ir1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            card_view:cardCornerRadius="20dp"
            card_view:contentPadding="10dp"
            card_view:cardBackgroundColor="@color/cardColor">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="@color/cardText"
                android:text="@string/guideline"
                android:textSize="@dimen/texts" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@color/cardText"
            android:text="Application"
            android:textSize="@dimen/headings"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_ir2"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            card_view:cardCornerRadius="20dp"
            card_view:contentPadding="10dp"
            card_view:cardBackgroundColor="@color/cardColor">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="@color/cardText"
                android:text="@string/incubator_application"
                android:textSize="@dimen/texts" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@color/cardText"
            android:text="Validation of Incubator Recognition"
            android:textSize="@dimen/headings"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_ir3"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            card_view:cardCornerRadius="20dp"
            card_view:contentPadding="10dp"
            card_view:cardBackgroundColor="@color/cardColor">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="@color/cardText"
                android:text="@string/validation_of_incubator_recognition"
                android:textSize="@dimen/texts" />

        </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>